# Asset_custody_solution

./: README.md
backend/: .env
backend/src/: cli.rs  main.rs  router.rs  soroban_runner.rs  state.rs  stellar_client.rs
frontend/: .env  package.json
frontend/backend/: .env  Cargo.toml
frontend/frontend/: .env  index.html  package-lock.json  vite.config.js
frontend/frontend/src/: App.jsx  main.jsx
frontend/frontend/src/components/: Navbar.jsx  ProposalsList.jsx  ProposeForm.jsx  WalletConnect.jsx
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx  WalletConnect.jsx
frontend/src/utils/: stellar.js
scripts/: deploy.sh
smart_contracts/asset_custody/: Cargo.toml  Cargo.toml.bak  unsigned_deploy.xdr
smart_contracts/asset_custody/src/: lib.rs
